# rsspal

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  TODO  install_script.sh  rsspal.service  rsspal.sh
.github/workflows/: auto-merge.yml  deploy.yml  main.yml
migrations/: 20230821012453_setup.sql
src/: admin_commands.rs  config.rs  db.rs  discord.rs  feed.rs  main.rs  opml.rs  signal.rs  update.rs
src/discord/: api_params.rs
src/feed/: atom.rs  rss.rs
test/: rssboard.xml  youtube_channel.xml
