[package]
name = "rsspal"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
console-subscriber = "0.2"
flate2 = "1.0"
lazy_static = "1.4"
nix = "0.26"
quick-xml = { version = "0.30", features = ["serialize", "overlapped-lists"] }
regex = "1.9"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
serenity = "0.11"
tempfile = "3.8"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.7"
tracing = { version = "0.1", features = ["log"]}
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

